--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css"
+			rel="stylesheet"
+		/>
+
+		<link
+			href="https://api.mapbox.com/mapbox-assembly/v0.23.2/assembly.min.css"
+			rel="stylesheet"
+		/>
 		<title>Medicine App</title>
 	</head>
 	<body>
